# JijHandsOnMaterials

./: .gitignore  README.md  pyproject.toml
ja/: 00configファイルの設定方法について.ipynb  01初めてのイジング最適化.ipynb  01初めての最適化問題.ipynb  02巡回セールスマン問題.ipynb  03JijBenchmark.ipynb  03JijZept.ipynb  04JijBenchmark.ipynb  10交通渋滞緩和最適化.ipynb  シフト最適化問題.ipynb
