[tool.poetry]
name = "jijzepthandson"
version = "0.1.0"
description = "Handson notebooks"
authors = ["Jij Inc."]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.9, <3.10"
jupyter = "^1.0.0"
openjij = "^0.4.9"
jijzept = "^1.9.2"
jijmodeling = "^0.9.16"
matplotlib = "^3.5.1"
networkx = "^2.7.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
